--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://play-lh.googleusercontent.com/WG5hMXbtPfB8u9xZ4PfHnkawBhmbdgvsmFx3qd6DFcwdGPJWnnkd5wAn19tP0G_E-cg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>The official website for Bratva | UEFA.com</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
